--- a/productsdetails.html
+++ b/productsdetails.html
@@ -197,7 +197,28 @@
       </div>
     </section><!-- /Product Details Section -->
   </main>
+  <section id="call-to-action" class="call-to-action section">
 
+    <img src="/assets/img/hero-bg.png" alt="">
+    <img src="/assets/img/image dashboard.png"  class="phone-1">
+
+    <div class="container">
+      
+      <div class="row justify-content-left" data-aos="zoom-in" data-aos-delay="100">
+        <div class="col-xl-6">
+          <div class="text-left">
+            <h3>Did you see our latest Product?</h3>
+            <h3>Discover the Power of <b>Safety Shield Ultra</b></h3>
+
+            <p>Want to learn more about how Safety Shield Ultra can revolutionize your data security? <br> Visit our comprehensive product page to explore all features, benefits, and see how our AI-driven solution can safeguard your critical information.</p>
+            <a class="cta-btn" href="safetyshield.html">Explore Safety Shield Ultra</a>
+            <a  id="seeInActionBtn" class="cta-btn download-btn"><i class="bi bi-play-circle"></i> <span>See It in Action</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section><!-- /Call To Action Section -->   
 
   
   <footer id="footer" class="footer">
@@ -235,6 +256,7 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Products & Solution</h4>
             <ul>
+              <li><a href="safetyshield.html" class="nav-link "><span>Safety Shield Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
               <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
               <li><a href="productsdetails.html?product=product-3">Compression</a></li>
