--- a/service-details.html
+++ b/service-details.html
@@ -288,6 +288,7 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Products & Solution</h4>
             <ul>
+              <li><a href="safetyshield.html" class="nav-link "><span>Safety Shield Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1">Interpretability</a></li>
               <li><a href="productsdetails.html?product=product-2">Anonymization</a></li>
               <li><a href="productsdetails.html?product=product-3">Compression</a></li>
