--- a/safetyshield.html
+++ b/safetyshield.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Safety Shield Ultra - Presentation</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+
+
+  <meta name="description" content="Safety Shield Ultra is an advanced AI-driven security platform designed to protect critical data for businesses of all sizes. It offers real-time threat detection, automated compliance management, and proactive risk mitigation. The platform utilizes cutting-edge artificial intelligence to continuously monitor data interactions, detect potential security breaches, automate compliance processes, and predict vulnerabilities before they become threats. Safety Shield Ultra integrates seamlessly with existing security infrastructure and includes features such as user behavior analytics, comprehensive risk assessment, and intelligent compliance management. With its scalable solutions and 24/7 support, Safety Shield Ultra provides robust protection against evolving cyber threats and ensures adherence to industry regulations.
+">
+  <meta name="keywords" content="AI-driven security, data protection, threat detection, compliance automation, risk mitigation, cybersecurity, user behavior analytics, artificial intelligence, data security, regulatory compliance, insider threat prevention, security analytics, enterprise security, cloud security, advanced threat intelligence, risk assessment, security automation, data privacy, cyber threat protection, security infrastructure">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
