--- a/safetyshield.html
+++ b/safetyshield.html
@@ -164,7 +164,6 @@
 <!-- About Section -->
 <section id="about" class="about section">
   <div class="background-image"></div>
-
   <div class="container about-content" data-aos="fade-up" data-aos-delay="100">
     <div class="row align-items-xl-center gy-5">
       <div class="col-lg-5 content">
@@ -175,7 +174,13 @@
         <h4>Discover Safety Shield Ultra</h4>
         <h2>AI-Driven Protection for Your Most Valuable Assets</h2>
         <p>Safety Shield Ultra harnesses cutting-edge AI to provide ironclad protection for your critical data. Our platform offers real-time threat analysis, automated risk management, and instant compliance checks, ensuring your sensitive information remains impenetrable.</p>
-        <a href="#featured" class="read-more"><span>See more</span><i class="bi bi-arrow-right"></i></a>
+        <div class="d-flex gap-3">
+          <a href="#featured" class="read-more"><span>See more</span><i class="bi bi-arrow-right"></i></a>
+          <a href="#" class="read-more request-demo-btn" id="aboutRequestDemoBtn">
+            <i class="bi bi-rocket-takeoff"></i>
+            <span>Request a demo</span>
+          </a>
+        </div>
       </div>
       <div class="col-lg-7">
         <div class="row gy-4 icon-boxes">
@@ -211,7 +216,7 @@
       </div>
     </div>
   </div>
-</section><!-- /About Section -->
+</section>
 
     <!-- Featured Section -->
     <section id="featured" class="featured section">
@@ -345,6 +350,23 @@
     </div>
   </div>
 </section><!-- /Features Section -->
+
+<section id="cta-features" class="cta-features-section">
+  <div class="cta-container">
+    <div class="cta-wrapper">
+      <div class="cta-text">
+        <h2 style="margin-bottom: 0px; padding-bottom: 0px; color: aliceblue;">Know all the features and see how it works</h2>
+        <p style="color: rgba(233, 233, 233, 0.4); margin-bottom: 0;">Explore with us all the features</p>
+      </div>
+      <div class="cta-button">
+        <a href="#" class="cta-demo-btn" id="ctaRequestDemo">
+          <i class="bi bi-rocket-takeoff"></i>
+          <span>Request a demo</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- FAQ Section -->
     <section id="faq" class="faq section">
