--- a/safetyshield.html
+++ b/safetyshield.html
@@ -70,7 +70,7 @@
               <span>Products & Solutions</span>
             </a>
             <ul>
-              <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.png" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
+              <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -142,11 +142,11 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-lg-last hero-img" data-aos="zoom-out">
-            <img src="assets/img/image dashboard.png" alt="Safety Shield Ultra Dashboard" class="phone-1">
+            <img src="assets/img/image dashboard.webp" alt="Safety Shield Ultra Dashboard" class="phone-1">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-content-center align-items text-center text-md-start" data-aos="fade-up">
             <blockquote data-aos="fade-up" data-aos-delay="100">
-              <h2><img src="assets/img/favicon_copia.png" alt="" class="logo-img">
+              <h2><img src="assets/img/favicon_copia.webp" alt="" class="logo-img">
                 Safety Shield Ultra: Next-Gen Security for Critical Data </h2>
               <p id="typewriter-description">Unleash the power of AI to fortify your sensitive data. Safety Shield Ultra offers unparalleled threat detection, real-time monitoring, and compliance automation, keeping you invincible in the digital realm.</p>
             </blockquote>
@@ -168,8 +168,8 @@
     <div class="row align-items-xl-center gy-5">
       <div class="col-lg-5 content">
         <div class="image-container">
-          <img src="assets/img/notebookdash.png" alt="" class="notebookdash">
-          <img src="assets/img/celudash.png" alt="" class="celudash">
+          <img src="assets/img/notebookdash.webp" alt="" class="notebookdash">
+          <img src="assets/img/celudash.webp" alt="" class="celudash">
         </div>
         <h4>Discover Safety Shield Ultra</h4>
         <h2>AI-Driven Protection for Your Most Valuable Assets</h2>
