--- a/productsdetails.html
+++ b/productsdetails.html
@@ -74,7 +74,7 @@
               <span>Products & Solutions</span>
             </a>
             <ul>
-              <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.png" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
+              <li><a href="safetyshield.html" class="nav-link "><img src="/assets/img/favicon_copia.webp" class="logo-header"></img><span>Safety Shield Ultra</span></a></li>
               <li><a href="productsdetails.html?product=product-1" class="nav-link"><i class="bi bi-bar-chart-fill"></i><span>Interpretability</span></a></li>
               <li><a href="productsdetails.html?product=product-2" class="nav-link"><i class="bi bi-shield-lock-fill"></i><span>Anonymization</span></a></li>
               <li><a href="productsdetails.html?product=product-3" class="nav-link"><i class="bi bi-arrow-up-right-square-fill"></i><span>Compression</span></a></li>
@@ -198,7 +198,7 @@
     </section><!-- /Product Details Section -->
   </main>
   <section id="call-to-action" class="call-to-action section">
-    <img src="/assets/img/hero-bg.png" alt="Background image">
+    <img src="/assets/img/hero-bg.webp" alt="Background image">
 
     <div class="container">
       <div class="row justify-content-left" data-aos="zoom-in" data-aos-delay="100">
