--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ class AnalyticsLoader {
   
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <video autoplay loop muted playsinline preload="metadata" poster="./assets/img/hero-poster.jpg">
+      <video autoplay loop muted playsinline preload="metadata" poster="./assets/img/algorithmic-protection.webp">
         <source src="./assets/img/brain-bg.mp4" type="video/mp4">
       </video>
       <div class="container">
