--- a/productsdetails.html
+++ b/productsdetails.html
@@ -9,8 +9,8 @@
   <meta content="technology products, product details, innovative products, tech solutions, software products, IT products, Ultradeeptech products, business technology products, digital products, advanced technology" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/favicon.webp" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -45,7 +45,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/favicon.png" alt="" class="logo-img">
+        <img src="assets/img/favicon.webp" alt="Ultra Deep Tech Logo" width="32" height="32" class="logo-img">
         <h1 class="sitename">Ultra Deep Tech</h1>
       </a>
   
@@ -198,22 +198,24 @@
     </section><!-- /Product Details Section -->
   </main>
   <section id="call-to-action" class="call-to-action section">
-    <img src="/assets/img/hero-bg.webp" alt="Background image">
+    <img src="/assets/img/hero-bg.webp" alt="Background image" width="1920" height="1080" loading="lazy">
 
     <div class="container">
       <div class="row justify-content-left" data-aos="zoom-in" data-aos-delay="100">
         <!-- Left Column -->
         <div class="col-xl-6">
           <div class="text-left">
-            <h3>Did you see our latest Product?</h3>
-            <h3>Discover the Power of <b>Safety Shield Ultra</b></h3>
+            <h3>Protect Your AI From Modern Threats</h3>
+            <h3>Discover  <b>Safety Shield Ultra</b></h3>
             <p>
-              Want to learn more about how Safety Shield Ultra can revolutionize your data security? 
+              Defend your conversational AI against prompt injection and data leaks.
               <br> 
-              Visit our comprehensive product page to explore all features, benefits, and see how our AI-driven solution can safeguard your critical information.
+              See how Safety Shield Ultra keeps your AI interactions secure in real-time.
+
             </p>
-            <a class="cta-btn" href="safetyshield.html">Explore Safety Shield Ultra</a>
-            <a id="seeInActionBtn" class="cta-btn download-btn">
+            <a class="cta-btn" href="safetyshield.html">                <i class="bi bi-shield-check"></i> 
+              Secure Your AI</a>
+            <a id="seeInActionBtn" class="cta-btn download-btn" href="#">
               <i class="bi bi-play-circle"></i> 
               <span>See It in Action</span>
             </a>
