--- a/service-details.html
+++ b/service-details.html
@@ -9,8 +9,8 @@
   <meta content="technology services, service details, tech solutions, software development, AI services, big data solutions, cybersecurity, digital transformation, Ultradeeptech services, IT consulting" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/favicon.webp" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -45,7 +45,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/favicon.png" alt="" class="logo-img">
+        <img src="assets/img/favicon.webp" alt="Ultra Deep Tech Logo" width="32" height="32" class="logo-img">
         <h1 class="sitename">Ultra Deep Tech</h1>
       </a>
   
