--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
 
   <!-- Vendor CSS Files -->
-  <link rel="preload" href="assets/vendor/bootstrap/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="preload" href="assets/vendor/bootstrap-icons/bootstrap-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="preload" href="assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
 
       <!-- Fallback for preload -->
-  <noscript>
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-  </noscript>
+
   
   <link href="assets/vendor/aos/aos.css" rel="stylesheet" media="print" onload="this.media='all'">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" media="print" onload="this.media='all'">
@@ -175,7 +172,7 @@ class AnalyticsLoader {
   
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <video autoplay loop muted playsinline  >
+      <video autoplay loop muted playsinline preload="metadata" poster="./assets/img/algorithmic-protection.webp">
         <source src="./assets/img/brain-bg.mp4" type="video/mp4">
       </video>
       <div class="container">
@@ -623,11 +620,11 @@ class AnalyticsLoader {
 
   <!-- Main JS File -->
   <script src="assets/js/main.js" defer></script>
+  <script src="assets/js/image-loader.js" defer></script>
   <script src="assets/js/youtube-lite.js" defer></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/analytics-loader.js" defer></script>
   <script src="assets/js/cookies.js" defer></script>
-  <script src="assets/js/lazy-loader.js" defer></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
