--- a/index.html
+++ b/index.html
@@ -604,8 +604,14 @@ class AnalyticsLoader {
 
 <!-- Preloader -->
 <div id="preloader">
-  <img src="assets/img/logo_udt_03-400h.png" alt="Ultra Deep Tech Logo"> <!-- Asegúrate de usar la ruta correcta del logo -->
-</div>
+  <img 
+  src="assets/img/logo_udt_03-400h.png" 
+  alt="Ultra Deep Tech Logo" 
+  width="300" 
+  height="100"
+  fetchpriority="high"
+  decoding="async"
+></div>
 
 
   <!-- Vendor JS Files -->
