--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ class AnalyticsLoader {
   
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <video autoplay loop muted playsinline preload="metadata" >
+      <video autoplay loop muted playsinline >
         <source src="./assets/img/brain-bg.mp4" type="video/mp4">
       </video>
       <div class="container">
@@ -616,10 +616,10 @@ class AnalyticsLoader {
 
 
   <!-- Main JS File -->
+  <script src="assets/js/script.js"></script>
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/image-loader.js" defer></script>
   <script src="assets/js/youtube-lite.js" defer></script>
-  <script src="assets/js/script.js"></script>
   <script src="assets/js/analytics-loader.js" defer></script>
   <script src="assets/js/cookies.js" defer></script>
 
